[gd_scene load_steps=19 format=3 uid="uid://byipodvx512ao"]

[ext_resource type="Script" path="res://auto_scaler.gd" id="1_dddjb"]
[ext_resource type="Shader" path="res://outline.gdshader" id="1_r4qwg"]
[ext_resource type="Texture2D" uid="uid://cr8iog8j4qwhx" path="res://Scale.png" id="2_x45wq"]
[ext_resource type="Texture2D" uid="uid://jjdqjmdmetgg" path="res://Arrow.png" id="3_1krfc"]
[ext_resource type="Texture2D" uid="uid://0yajco57mnmj" path="res://scale_outline.png" id="4_y68ec"]
[ext_resource type="Texture2D" uid="uid://4k6ayjitthmb" path="res://scale_grey.png" id="5_758sf"]
[ext_resource type="Texture2D" uid="uid://csw6wbx606qtb" path="res://Money.png" id="6_4cmr2"]
[ext_resource type="Texture2D" uid="uid://c2im7m83nqdg" path="res://Gem.png" id="7_djetc"]
[ext_resource type="Texture2D" uid="uid://b4p8edfhe5gyb" path="res://Clock.png" id="8_i5j8b"]
[ext_resource type="Texture2D" uid="uid://diwnrcyuogcdk" path="res://Collect.png" id="10_mex6w"]
[ext_resource type="AudioStream" uid="uid://bb3geas050ik0" path="res://slime_12.ogg" id="11_p7nh8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tains"]
shader = ExtResource("1_r4qwg")
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m7v7g"]
shader = ExtResource("1_r4qwg")
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4bgbt"]
shader = ExtResource("1_r4qwg")
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_03lg4"]
shader = ExtResource("1_r4qwg")
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_evuh6"]
shader = ExtResource("1_r4qwg")
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l8skn"]
shader = ExtResource("1_r4qwg")
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o0trn"]
shader = ExtResource("1_r4qwg")
shader_parameter/outline_color = null

[node name="AutoScaler" type="Control" groups=["AutoScaler"]]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dddjb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -4.0
offset_top = -4.0
offset_right = 1167.0
offset_bottom = 669.0
color = Color(0, 0, 0, 0.501961)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
material = SubResource("ShaderMaterial_tains")
layout_mode = 0
offset_left = 147.0
offset_top = 49.0
offset_right = 1003.0
offset_bottom = 593.0
texture = ExtResource("2_x45wq")

[node name="MaxStoredScales" type="TextureRect" parent="ColorRect/TextureRect"]
material = SubResource("ShaderMaterial_m7v7g")
offset_left = 135.0
offset_top = 315.0
offset_right = 214.0
offset_bottom = 369.0
rotation = 6.28319
texture = ExtResource("4_y68ec")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="ColorRect/TextureRect/MaxStoredScales"]
material = SubResource("ShaderMaterial_4bgbt")
layout_mode = 0
offset_left = 19.0
offset_top = 14.0
offset_right = 56.0
offset_bottom = 39.0
mouse_filter = 2
texture = ExtResource("2_x45wq")
expand_mode = 1

[node name="Text" type="RichTextLabel" parent="ColorRect/TextureRect/MaxStoredScales"]
offset_left = 96.0
offset_top = -10.0
offset_right = 246.0
offset_bottom = 70.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "10"

[node name="MaxFishMoneyButton" type="TextureButton" parent="ColorRect/TextureRect/MaxStoredScales"]
material = SubResource("ShaderMaterial_03lg4")
offset_left = 255.0
offset_top = -6.00004
offset_right = 346.0
offset_bottom = 61.0
texture_normal = ExtResource("5_758sf")
stretch_mode = 0

[node name="Text" type="RichTextLabel" parent="ColorRect/TextureRect/MaxStoredScales/MaxFishMoneyButton"]
offset_left = 91.0
offset_top = 15.0
offset_right = 183.0
offset_bottom = 59.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "10000"

[node name="TextureRect" type="TextureRect" parent="ColorRect/TextureRect/MaxStoredScales/MaxFishMoneyButton"]
material = SubResource("ShaderMaterial_evuh6")
offset_left = 31.0
offset_top = 10.0
offset_right = 63.0
offset_bottom = 52.0
mouse_filter = 2
texture = ExtResource("6_4cmr2")
expand_mode = 1

[node name="MaxFishGemButton" type="TextureButton" parent="ColorRect/TextureRect/MaxStoredScales"]
visible = false
material = SubResource("ShaderMaterial_03lg4")
offset_left = 437.0
offset_top = -3.00008
offset_right = 528.0
offset_bottom = 63.9999
texture_normal = ExtResource("5_758sf")
stretch_mode = 0
flip_h = true

[node name="TextureRect" type="TextureRect" parent="ColorRect/TextureRect/MaxStoredScales/MaxFishGemButton"]
material = SubResource("ShaderMaterial_evuh6")
offset_left = 25.0
offset_top = 13.0
offset_right = 70.0
offset_bottom = 55.0
mouse_filter = 2
texture = ExtResource("7_djetc")

[node name="Text" type="RichTextLabel" parent="ColorRect/TextureRect/MaxStoredScales/MaxFishGemButton"]
offset_left = 91.0
offset_top = 15.0
offset_right = 183.0
offset_bottom = 59.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "10000"

[node name="ScaleTime" type="TextureRect" parent="ColorRect/TextureRect"]
material = SubResource("ShaderMaterial_m7v7g")
offset_left = 135.0
offset_top = 386.0
offset_right = 210.0
offset_bottom = 440.0
rotation = 6.28319
texture = ExtResource("4_y68ec")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="ColorRect/TextureRect/ScaleTime"]
material = SubResource("ShaderMaterial_4bgbt")
layout_mode = 0
offset_left = 13.0
offset_top = 7.0
offset_right = 54.0
offset_bottom = 47.0
mouse_filter = 2
texture = ExtResource("8_i5j8b")
expand_mode = 1

[node name="Text" type="RichTextLabel" parent="ColorRect/TextureRect/ScaleTime"]
offset_left = 100.0
offset_top = -10.0
offset_right = 255.0
offset_bottom = 70.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "0"

[node name="FishTimeMoneyButton" type="TextureButton" parent="ColorRect/TextureRect/ScaleTime"]
material = SubResource("ShaderMaterial_03lg4")
offset_left = 255.0
offset_top = -6.00004
offset_right = 346.0
offset_bottom = 61.0
texture_normal = ExtResource("5_758sf")
stretch_mode = 0

[node name="Text" type="RichTextLabel" parent="ColorRect/TextureRect/ScaleTime/FishTimeMoneyButton"]
offset_left = 91.0
offset_top = 15.0
offset_right = 183.0
offset_bottom = 59.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "10000"

[node name="TextureRect" type="TextureRect" parent="ColorRect/TextureRect/ScaleTime/FishTimeMoneyButton"]
material = SubResource("ShaderMaterial_evuh6")
offset_left = 31.0
offset_top = 10.0
offset_right = 63.0
offset_bottom = 52.0
mouse_filter = 2
texture = ExtResource("6_4cmr2")
expand_mode = 1

[node name="FishTimeGemButton" type="TextureButton" parent="ColorRect/TextureRect/ScaleTime"]
visible = false
material = SubResource("ShaderMaterial_03lg4")
offset_left = 437.0
offset_top = -3.00008
offset_right = 528.0
offset_bottom = 63.9999
texture_normal = ExtResource("5_758sf")
stretch_mode = 0
flip_h = true

[node name="Text" type="RichTextLabel" parent="ColorRect/TextureRect/ScaleTime/FishTimeGemButton"]
offset_left = 91.0
offset_top = 15.0
offset_right = 183.0
offset_bottom = 59.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "10000"

[node name="TextureRect" type="TextureRect" parent="ColorRect/TextureRect/ScaleTime/FishTimeGemButton"]
material = SubResource("ShaderMaterial_evuh6")
offset_left = 25.0
offset_top = 13.0
offset_right = 70.0
offset_bottom = 55.0
mouse_filter = 2
texture = ExtResource("7_djetc")

[node name="BackButton" type="TextureButton" parent="ColorRect/TextureRect"]
material = SubResource("ShaderMaterial_l8skn")
offset_left = 262.0
offset_top = 453.0
offset_right = 403.0
offset_bottom = 528.0
texture_normal = ExtResource("3_1krfc")
stretch_mode = 0

[node name="ColorRect" type="ColorRect" parent="ColorRect/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 39.0
offset_right = 431.0
offset_bottom = 230.0
rotation = 0.322811
color = Color(0, 0, 0, 1)

[node name="CollectButton" type="TextureButton" parent="ColorRect/TextureRect"]
material = SubResource("ShaderMaterial_o0trn")
layout_mode = 0
offset_left = 147.0
offset_top = 191.0
offset_right = 256.0
offset_bottom = 300.0
texture_normal = ExtResource("10_mex6w")
stretch_mode = 0

[node name="StoredScalesDisplay" type="RichTextLabel" parent="ColorRect/TextureRect"]
layout_mode = 0
offset_left = 175.0
offset_top = 78.0
offset_right = 356.0
offset_bottom = 161.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[right]0"

[node name="MaxScalesDisplay" type="RichTextLabel" parent="ColorRect/TextureRect"]
layout_mode = 0
offset_left = 417.0
offset_top = 146.0
offset_right = 642.0
offset_bottom = 218.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "10"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_p7nh8")

[connection signal="button_up" from="ColorRect/TextureRect/MaxStoredScales/MaxFishMoneyButton" to="." method="_on_max_fish_money_button_button_up"]
[connection signal="button_up" from="ColorRect/TextureRect/ScaleTime/FishTimeMoneyButton" to="." method="_on_fish_time_money_button_button_up"]
[connection signal="button_up" from="ColorRect/TextureRect/BackButton" to="." method="_on_back_button_button_up"]
[connection signal="button_up" from="ColorRect/TextureRect/CollectButton" to="." method="_on_collect_button_button_up"]
